Started work on the cards

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Evequest</title>
+	<title>Evequest | Legend of the Golden Honeybun</title>
 </head>
 
-<body>
+<body style="background-color: black;">
 	<div id="app"></div>
 	<script type="module" src="src/scripts/game.ts"></script>
 </body>
